[package]
authors = ["Olivier Yiptong <olivier@olivieryiptong.com>"]
build = "build.rs"
name = "hull"
version = "0.0.1"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
diesel = "0.9.1"
diesel_cli = "0.9.0"
env_logger = "0.3.5"
futures = "0.1.7"
log = "0.3.6"
rustfmt = "0.6.3"
serde = "0.8.21"
serde_json = "0.8.4"
tempdir = "0.3.5"
time = "0.1.35"
tokio-core = "0.1.2"
