[package]
authors = ["Olivier Yiptong <olivier@olivieryiptong.com>"]
name = "hull"
version = "0.2.0"

[dependencies]
crossbeam-channel = "0.3"
env_logger = "0.6"
log = "0.4"
nix = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.1"
time = "0.1"

[dev-dependencies]
tempdir = "0.3"
